--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.13.3",
+    "express-proxy": "0.0.2",
     "express-request-proxy": "^2.0.0",
     "pg": "^6.1.2"
   }
